--- a/style.qss
+++ b/style.qss
@@ -1,5 +1,5 @@
 QWidget{
-    color:black
+    color:black;
 }
 
 #widget{
@@ -13,6 +13,9 @@ QLineEdit{
     border-radius:20px;border:3px solid #999999;
     selection-color:#FFFFFF;
     selection-background-color:#33CCCC;
+    font-family: "MS Gothic";
+    font-size: 18px;
+    padding-left:10px;
 }
 QLineEdit:focus{
     border:3px solid #33CCCC;
